package keeper

import (
	"context"

	"faucetchain/x/faucetchain/types"

	sdk "github.com/cosmos/cosmos-sdk/types"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

func (k Keeper) RequestsByAddress(goCtx context.Context, req *types.QueryRequestsByAddressRequest) (*types.QueryRequestsByAddressResponse, error) {
	if req == nil {
		return nil, status.Error(codes.InvalidArgument, "invalid request")
	}

	ctx := sdk.UnwrapSDKContext(goCtx)

	// TODO: Process the query
	_ = ctx

	return &types.QueryRequestsByAddressResponse{}, nil
}
